[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>reveal.js</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.1-SNAPSHOT</version>
     <name>reveal.js</name>
     <description>WebJar for reveal.js</description>
     <url>http://webjars.org</url>
@@ -47,7 +47,7 @@
         <url>http://github.com/webjars/reveal.js</url>
         <connection>scm:git:https://github.com/webjars/reveal.js.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/reveal.js.git</developerConnection>
-        <tag>reveal.js-3.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
     
     <build>
